--- a/styles.css
+++ b/styles.css
@@ -1,68 +1,78 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-.navbar{
-    background-color: #ffffff;
-    display: flex;
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-
-li {
-    display: inline-block;
-}
-
-a {
-    display: block;
-   color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration:5px underline rgb(0, 255, 200);
-    transition: 0.7s;
+body{
+    #background-image: url("space.jpg");
+    background-color: rgb(27, 26, 26);
+    color: aliceblue ;
+    height: 100vh;
     
-
 }
-.nav-logo{
-    width: 50%;
+.container{
+    margin: 6%;
+    text-align: left;.
+    color: green;
 }
-.nav-list{
+nav{
     display: flex;
-    justify-content: right;
-    align-items: end;
-}
-.about-section {
-    display: flex;
-    padding: 40px;
-    margin-top: 30px;
-}
-
-.about-image{
-    display: flex;
-    width: 50%;
-    border-radius: 50%;
-}
-
-.about-image img {
-    width: 50vh;
-    height: 50vh;
-    border-radius: 50%;
-}
-
-.about-content {
-    display: flex;
-    padding-left: 20px;
+    background-color: rgb(31, 178, 242);
+    margin:0.5% 2%;
+    justify-content:space-around;
     align-items: center;
+    padding: 10px 20px;
+    border-radius: 15px;
+    box-shadow:2.5px 2.6px 2px white;
+
+}
+nav ul{
+    display: flex;
+    list-style: none;
+}
+nav ul li a{
+   
+    margin: 0,10px;
+    
+    text-decoration: none;
+    padding: 10px 20px;
+    color: black;
+    z-index: 100;
+    
+}
+a:hover{
+    border-radius: 30px;
+    background-color: #F8FBEF;
+    color: rgb(202, 18, 18);
+    box-shadow:2.5px 2.6px 2px rgb(15, 15, 15);
+ }
+.container1{
+    margin-top: 100px;
+    flex-wrap: wrap;
     justify-content: center;
+    border: 1px green;
+    display: flex;
+}
+.projects{
+   width: 325px;
+    background-color: rgb(103, 162, 244);
+    overflow: hidden;
+    box-shadow: 1px 1px 1px 1.5px;
+    border-radius: 3px;
+    #margin: 30px;
+    text-align: center;
+
+}
+.projects button{
+    background-color: rgb(17, 229, 158);
+    margin-left: 35%;
+    border-radius: 10px;
+    justify-content: center;
+}
 
 
+footer{
+    background-color: rgb(248, 245, 241);
+    margin:10px 20px;
+    color:rgb(12, 14, 12) ;
+    border-radius: 5px;
+    height: 50px;
+    display:flex;
+    justify-content:center;
+    align-items: center;
 }
